docs: mark lsp tooling workaround cleanup as done